[package]
name = "dumb-crypto"
description = "Dumb, but easily verifiable implementations of crypto algorithms"
version = "2.0.0"
authors = ["Fedor Indutny <fedor@indutny.com>"]
repository = "https://github.com/indutny/dumb-crypto"
license = "MIT"
categories = ["cryptography"]
keywords = ["crypto","sha256","hmac","pbkdf2","scrypt"]
readme = "README.md"
exclude = [".travis.yml"]
edition = "2018"

[dependencies]

[badges]
travis-ci = { repository = "indutny/dumb-crypto" }
